Replace recursive algorithm with iterative that handled general waypoints.
Recursive alg simply does not work in java since not enough stack space.
Major change required for iterative with multiple waypoints.
Refactor use getNeighbors from Board, remove from RobotsState.

Main improvements to performance entrypoint.